--- a/app/templates/app/layout.html
+++ b/app/templates/app/layout.html
@@ -30,9 +30,10 @@
                     <li><a href="{% url 'home' %}">Главная</a></li>
                     <li><a href="{% url 'about' %}">О компании</a></li>
                     <li><a href="{% url 'contact' %}">Контакты</a></li>
-                    <li><a href="{% url 'links' %}">Полезные ссылки</a></li>
+                    <li><a href="{% url 'links' %}">Ссылки</a></li>
                     <li><a href="{% url 'pool' %}">Отзывы</a></li>
                     <li><a href="{% url 'blog' %}">Статьи</a></li>
+                    <li><a href="{% url 'videopost' %}">Видео</a></li>
                 </ul>
                 {% include 'app/loginpartial.html' %}
             </div>
